# Activations

./: .gitignore  README.md  SelfNormalizingNetworks_MLP_MNIST.ipynb  Synthetic_Data_Exp.ipynb  ablation_DepthAdd1.ipynb  ablation_DepthAdd2.ipynb  ablation_Width_div_2.ipynb  main.py  pyproject.toml  widthx2_exp.ipynb
scripts/: run_experiment.py  run_sweep.sh
utils/: act_fn.py
